# controller

./: CMakeLists.txt  README.md  package.xml
bag/: data.txt  pelican.bag  traj.txt
cfg/: ASmcMavrosConfig.cfg
include/rrc_control/: asmc_mavros_controller.h  asmc_position_controller.h  autde_position_controller.h  common.h  common_1.h  elas_smc_position_controller.h  math.h  pid_position_controller.h  reconfig_pid_controller.h  rsb_position_controller.h  rsbv_position_controller.h  sac_position_controller.h  sb_position_controller.h  smc_position_controller.h
include/viswa_control/: asmc_position_controller.h  common.h  parameters.h  parameters_ros.h  pid_position_controller.h  smc_position_controller.h
launch/: controller_testing.launch  controller_tuning.launch  hovering_example.launch  mav_hovering_example.launch  mav_hovering_example_rrc.launch  mavros_controller.launch  plain_mav.launch  quad_with_mocap.launch  reconfig_example.launch  ring_scene.launch  sitl_circle.launch  sitl_mav.launch  spawn_box.launch
models/urdf/: box0.xacro  box1.xacro  checkpoint.xacro
msg/: BoxMsg.msg  PlotDataMsg.msg
resources/: asmc_iris.yaml  asmc_pelican.yaml  autde_pelican.yaml  dummy_controller_pelican.yaml  elas_smc_pelican.yaml  pelican.yaml  pid_controller_pelican.yaml  pid_controller_reconfig_pelican.yaml  pid_controller_reconfig_pelican_sim.yaml  pid_pelican.yaml  reconfig_pelican.yaml  reconfig_pelican_sim.yaml  ring_waypoints.txt  rsb_pelican.yaml  rsbv_pelican.yaml  sac_pelican.yaml  sb_pelican.yaml  smc_pelican.yaml  waypoints.txt
scripts/: geometric_att.py  odom_asmc.txt  odom_traj.py  plot_sub.py  tag_to_odom.py  terminal_input_owp.py  traj_asmc.txt  velocity_publisher.py
scripts/exp/: asmc_req_format.txt  error_asmc.txt  error_pid.txt  error_smc.txt  error_smc_1.txt  odom_asmc.txt  odom_pid.txt  odom_smc.txt  odom_smc_1.txt  plot_doc.py  py_to_mat.py  traj_asmc.txt  traj_pid.txt  traj_smc.txt  traj_smc_1.txt
scripts/icra_2021/: error_elas_elong_wall.txt  error_elas_wall.txt  error_peli_wall.txt  odom_elas_elong_wall.txt  odom_elas_wall.txt  odom_pd.txt  odom_peli_wall.txt  plots.py  traj_elas_elong_wall.txt  traj_elas_wall.txt  traj_pd.txt  traj_peli_wall.txt
scripts/icra_2021/elas_points/: error_elas.txt  error_peli.txt  odom_peli.txt  plots.py  traj_elas.txt  traj_peli.txt
scripts/icra_2021/elas_wall_wind/: error_elas.txt  error_elas_wind.txt  error_peli.txt  error_peli_wind.txt  odom_elas_wind.txt  odom_peli.txt  odom_peli_wind.txt  plots.py  traj_elas.txt  traj_elas_wind.txt  traj_peli.txt  traj_peli_wind.txt
scripts/icra_2021/old/: error_rsb.txt  error_rsb_1.txt  error_rsb_15.txt  error_rsb_2.txt  error_rsb_way.txt  error_rsb_way_0.1.txt  error_rsb_way_0.15.txt  error_rsb_way_0.3.txt  error_sb.txt  error_smc.txt  error_smc_way.txt  error_smc_way_0.15.txt  error_smc_way_0.3.txt  odom_rsb.txt  odom_rsb_1.txt  odom_rsb_15.txt  odom_rsb_2.txt  odom_rsb_way.txt  odom_rsb_way_0.1.txt  odom_rsb_way_0.15.txt  odom_rsb_way_0.3.txt  odom_sb.txt  odom_smc.txt  odom_smc_way.txt  odom_smc_way_0.15.txt  odom_smc_way_0.3.txt  traj_rsb.txt  traj_rsb_1.txt  traj_rsb_15.txt  traj_rsb_2.txt  traj_rsb_way.txt  traj_rsb_way_0.1.txt  traj_rsb_way_0.15.txt  traj_rsb_way_0.3.txt  traj_sb.txt  traj_smc.txt  traj_smc_way.txt  traj_smc_way_0.15.txt  traj_smc_way_0.3.txt
scripts/icra_2021/pipes/: error_rsb_pipe.txt  error_smc_pipe.txt  odom_rsb_pipe.txt  odom_smc_pipe.txt  plots.py  traj_rsb_pipe.txt  traj_smc_pipe.txt
scripts/icra_2021/ring/: error_pd.txt  error_rsb1_ring_wind.txt  error_rsb_ring.txt  error_rsb_ring_wind.txt  error_smc1_ring_wind.txt  error_smc_ring.txt  error_smc_ring_wind.txt  odom_rsb1_ring_wind.txt  odom_rsb_ring.txt  odom_rsb_ring_wind.txt  odom_smc1_ring_wind.txt  odom_smc_ring.txt  odom_smc_ring_wind.txt  plots.py  proposed_data.txt  traj_rsb1_ring_wind.txt  traj_rsb_ring.txt  traj_rsb_ring_wind.txt  traj_smc1_ring_wind.txt  traj_smc_ring.txt  traj_smc_ring_wind.txt
scripts/iros_2021/ring/: error_pid.txt  error_sac.txt  odom_pid.txt  odom_sac.txt  plots.py  traj_pid.txt  traj_sac.txt
scripts/point_track/: plot_doc.txt
scripts/traj/: error_asmc.txt  error_backstep.txt  error_backstep_1.txt  error_pid.txt  odom_asmc.txt  odom_backstep.txt  odom_backstep_1.txt  odom_pid.txt  plot_doc.py  plot_fudge.py  plots.py  traj_asmc.txt  traj_backstep.txt  traj_backstep_1.txt  traj_pid.txt
scripts/traj_tmech/: error_asmc.txt  error_pid.txt  error_smc.txt  odom_asmc.txt  odom_pid.txt  odom_smc.txt  plot_doc.py  plot_fudge.py  traj_asmc.txt  traj_pid.txt  traj_smc.txt
src/nodes/: asmc_mavros_controller_node.cpp  asmc_position_controller_node.cpp  asmc_position_controller_node.h  autde_position_controller_node.cpp  autde_position_controller_node.h  circle.cpp  controller.h  controller_node.cpp  elas_smc_position_controller_node.cpp  elas_smc_position_controller_node.h  hovering_example.cpp  hovering_smooth.cpp  init_position.cpp  launch_test.launch  lyap_tester.cpp  offboard_att.cpp  pickup_drop.cpp  pid_position_controller_node.cpp  pid_position_controller_node.h  points_publisher.cpp  reconfig_pid_controller_node.cpp  reconfig_pid_controller_node.h  reconfig_pid_controller_node_sim.cpp  reconfig_pid_controller_node_sim.h  ring_traj.cpp  rsb_position_controller_node.cpp  rsb_position_controller_node.h  rsbv_position_controller_node.cpp  rsbv_position_controller_node.h  sac_position_controller_node.cpp  sac_position_controller_node.h  sb_position_controller_node.cpp  sb_position_controller_node.h  smc_position_controller_node.cpp  smc_position_controller_node.h  traj_gen.cpp  up_and_down.cpp
worlds/: basic.world
